--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BASE_URL=http://localhost:8080
-MONGODB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb+srv://boobeh:qqkiZ5WrYWTecN5B@cluster0.igoem5u.mongodb.net/?retryWrites=true&w=majority
 SITE_CONTACT_EMAIL=youremail@yourdomain.com
 
 SESSION_SECRET=Your Session Secret goes here
