--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "cheerio": "^1.0.0-rc.10",
+    "compare-urls": "2.0.0",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
@@ -49,6 +50,7 @@
     "nodemailer": "^6.7.3",
     "nodemailer-sendgrid": "^1.0.3",
     "nodemon": "^2.0.20",
+    "normalize-url": "^7.2.0",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
