--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.0",
+    "node-fetch": "2.6.0",
     "node-quickbooks": "^2.0.39",
     "node-sass": "^7.0.1",
     "node-sass-middleware": "^1.0.1",
