--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "cheerio": "^1.0.0-rc.10",
+    "clipboard": "^2.0.11",
     "compare-urls": "2.0.0",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
